# Dostlang_npm

./: .gitignore  LICENSE  README.md  pyproject.toml
npm/dostlang/: README.md  package.json
npm/dostlang/python/worklib/: dostlang.py
npm/dostlang/scripts/: sync-runtime.mjs
src/worklib/: __init__.py  cli.py  text.py
tests/: test_dostlang.py  test_text.py
